unpackaged/main/default/objects/On_Off_Boarding__c/fields/USFO_Point_of_Presence__c.field-meta.xml
<CustomField>
    <fullName>USFO_Point_of_Presence__c</fullName>
    <label>USFO Point of Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALBANY</fullName>
                <label>ALBA NY</label>
            </value>
            <value>
                <fullName>ALBUQUERQUENM</fullName>
                <label>ALBUQUERQUE NM</label>
            </value>
            <value>
                <fullName>AMARILLOTX</fullName>
                <label>AMARILLO TX</label>
            </value>
            <value>
                <fullName>ASHBURNVA</fullName>
                <label>ASHBURN VA</label>
            </value>
            <value>
                <fullName>ATLANTAGA</fullName>
                <label>ATLANTA GA</label>
            </value>
            <value>
                <fullName>AUSTINTX</fullName>
                <label>AUSTIN TX</label>
            </value>
            <value>
                <fullName>BAKERSFIELDCA</fullName>
                <label>BAKERSFIELD CA</label>
            </value>
            <value>
                <fullName>BALTIMOREMD</fullName>
                <label>BALTIMORE MD</label>
            </value>
            <value>
                <fullName>BIRMINGHAMAL</fullName>
                <label>BIRMINGHAM AL</label>
            </value>
            <value>
                <fullName>BISMARCKND</fullName>
                <label>BISMARCK ND</label>
            </value>
            <value>
                <fullName>BOISEID</fullName>
                <label>BOISE ID</label>
            </value>
            <value>
                <fullName>BOSTONMA</fullName>
                <label>BOSTON MA</label>
            </value>
            <value>
                <fullName>BOZEMANMT</fullName>
                <label>BOZEMAN MT</label>
            </value>
            <value>
                <fullName>BUFFALONY</fullName>
                <label>BUFFALO NY</label>
            </value>
            <value>
                <fullName>CHARLESTONWV</fullName>
                <label>CHARLESTON WV</label>
            </value>
            <value>
                <fullName>CHARLOTTENC</fullName>
                <label>CHARLOTTE NC</label>
            </value>
            <value>
                <fullName>CHICAGOIL</fullName>
                <label>CHICAGO IL</label>
            </value>
            <value>
                <fullName>CHILOQUINOR</fullName>
                <label>CHILOQUIN OR</label>
            </value>
            <value>
                <fullName>CINCINNATIOH</fullName>
                <label>CINCINNATI OH</label>
            </value>
            <value>
                <fullName>CLEVELANDOH</fullName>
                <label>CLEVELAND OH</label>
            </value>
            <value>
                <fullName>COLORADO_SPRINGSCO</fullName>
                <label>COLORADO SPRINGS CO</label>
            </value>
            <value>
                <fullName>COLUMBIASC</fullName>
                <label>COLUMBIA SC</label>
            </value>
            <value>
                <fullName>COLUMBUSOH</fullName>
                <label>COLUMBUS OH</label>
            </value>
            <value>
                <fullName>DALLASTX</fullName>
                <label>DALLAS TX</label>
            </value>
            <value>
                <fullName>DANBURYCT</fullName>
                <label>DANBURY CT</label>
            </value>
            <value>
                <fullName>DENVERCO</fullName>
                <label>DENVER CO</label>
            </value>
            <value>
                <fullName>DES_MOINESIA</fullName>
                <label>DES MOINES IA</label>
            </value>
            <value>
                <fullName>DETROITMI</fullName>
                <label>DETROIT MI</label>
            </value>
            <value>
                <fullName>EL_ PASOTX</fullName>
                <label>EL_PASO TX</label>
            </value>
            <value>
                <fullName>FARGOND</fullName>
                <label>FARGO ND</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>