unpackaged/main/default/objects/On_Off_Boarding__c/fields/Workday_Ready__c.field-meta.xml
<CustomField>
    <fullName>Workday_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workday Ready</label>
    <type>Checkbox</type>
</CustomField>