unpackaged/main/default/objects/On_Off_Boarding__c/fields/ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Postal_Code__c</fullName>
    <label>ZIP/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>