unpackaged/main/default/objects/On_Off_Boarding__c/recordTypes/Billflex.recordType-meta.xml
<RecordType>
    <fullName>Billflex</fullName>
    <active>false</active>
    <label>Billflex</label>
</RecordType>