unpackaged/main/default/objects/On_Off_Boarding__c/recordTypes/Dispatcher.recordType-meta.xml
<RecordType>
    <fullName>Dispatcher</fullName>
    <active>true</active>
    <label>Dispatcher</label>
</RecordType>