unpackaged/main/default/objects/On_Off_Boarding__c/recordTypes/FSL.recordType-meta.xml
<RecordType>
    <fullName>FSL</fullName>
    <active>false</active>
    <label>FSL</label>
</RecordType>