unpackaged/main/default/objects/On_Off_Boarding__c/recordTypes/JDE.recordType-meta.xml
<RecordType>
    <fullName>JDE</fullName>
    <active>false</active>
    <label>JDE</label>
</RecordType>