unpackaged/main/default/objects/On_Off_Boarding__c/recordTypes/Resource_Planning.recordType-meta.xml
<RecordType>
    <fullName>Resource_Planning</fullName>
    <active>false</active>
    <label>Resource Planning</label>
</RecordType>