unpackaged/main/default/objects/On_Off_Boarding__c/validationRules/Contractor_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Contractor_Company</fullName>
    <active>false</active>
    <description>Company required for Contractor</description>
    <errorConditionFormula>IF(OR(ISPICKVAL(Resource_Type__c,&quot;BIR Contractor&quot;),ISPICKVAL(	Resource_Type__c,&quot;FLM Contractor&quot;)),ISPICKVAL(Company__c,&#39;&#39;),
OR(ISPICKVAL(Company__c,&quot;(EFT)PROTEL INDUSTRIES LTD.&quot;),
ISPICKVAL(Company__c,&quot;(EFT)VIDEOSAT ELECTRONICS INC.&quot;),
ISPICKVAL(Company__c,&quot;2059605 ALBERTA LTD&quot;),
ISPICKVAL(Company__c,&quot;COSERVE GLOBAL SOLUTIONS, LLC&quot;),
ISPICKVAL(Company__c,&quot;FIELD NATION LLC&quot;),
ISPICKVAL(Company__c,&quot;GCI COMMUNICATION CORP.&quot;),
ISPICKVAL(Company__c,&quot;GOBALASINGHAM, NEETH&quot;),
ISPICKVAL(Company__c,&quot;INSPYR SOLUTIONS LLC&quot;),
ISPICKVAL(Company__c,&quot;IT SOLUTION CLUB INC.&quot;),
ISPICKVAL(Company__c,&quot;MARKANDU, THUSEETHARAN&quot;),
ISPICKVAL(Company__c,&quot;METE, PASQUALE (PAT)&quot;),
ISPICKVAL(Company__c,&quot;POZIT TECHNOLOGIES INC.&quot;),
ISPICKVAL(Company__c,&quot;SCANPLUS LOCATING LTD.&quot;),
ISPICKVAL(Company__c,&quot;SINGH, SUKHCHAIN&quot;),
ISPICKVAL(Company__c,&quot;TECH READY SOLUTIONS INC.&quot;),
ISPICKVAL(Company__c,&quot;WESTPOINT TELECOMMUNICATIONS I&quot;),
ISPICKVAL(Company__c,&quot;WORK MARKET INC.&quot;)))</errorConditionFormula>
    <errorDisplayField>Company__c</errorDisplayField>
    <errorMessage>Company is required for Contractor ONLY</errorMessage>
</ValidationRule>