unpackaged/main/default/objects/On_Off_Boarding__c/listViews/Dispatcher.listView-meta.xml
<ListView>
    <fullName>Dispatcher</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>User__c</columns>
    <columns>Full_Name__c</columns>
    <columns>LOC_Supervisor__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Completed__c</columns>
    <columns>Request_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>On_Off_Boarding__c.Dispatcher</value>
    </filters>
    <filters>
        <field>LOC_Team__c</field>
        <operation>notEqual</operation>
        <value>STM Technician</value>
    </filters>
    <label>Dispatcher</label>
    <sharedTo>
        <role>Admin</role>
        <role>Dispatch_Manager</role>
    </sharedTo>
</ListView>