unpackaged/main/default/objects/On_Off_Boarding__c/listViews/SME_Technician.listView-meta.xml
<ListView>
    <fullName>SME_Technician</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Full_Name__c</columns>
    <columns>LOC_Supervisor__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Completed__c</columns>
    <columns>Request_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>On_Off_Boarding__c.Dispatcher</value>
    </filters>
    <filters>
        <field>Technician__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Add</value>
    </filters>
    <label>SME Technician</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>