unpackaged/main/default/objects/On_Off_Boarding__c/listViews/Technician.listView-meta.xml
<ListView>
    <fullName>Technician</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Employee_ID__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Contract_ID__c</columns>
    <columns>JDE_Status__c</columns>
    <columns>JDE__c</columns>
    <columns>JDE_Completed_Date__c</columns>
    <columns>BillFlex_Action__c</columns>
    <columns>Payroll_Cycle__c</columns>
    <columns>BillFlex_Completed_Date__c</columns>
    <columns>Completed__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>On_Off_Boarding__c.Technician</value>
    </filters>
    <label>Technician</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>