unpackaged/main/default/objects/On_Off_Boarding__c/listViews/X3_Billflex.listView-meta.xml
<ListView>
    <fullName>X3_Billflex</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Employee_ID__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Resource_Type__c</columns>
    <columns>BillFlex_Action__c</columns>
    <columns>Billflex_State__c</columns>
    <columns>Payroll_Cycle__c</columns>
    <columns>FSL_BillFlex_Username__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Send_Guide_Msg__c</columns>
    <columns>BillFlex_Completed_Date__c</columns>
    <columns>Ball_in_Court__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ball_in_Court__c</field>
        <operation>equals</operation>
        <value>Billflex</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Add,Update,Delete</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>On_Off_Boarding__c.Technician</value>
    </filters>
    <label>3 Billflex</label>
    <sharedTo>
        <role>Dispatch_Manager</role>
        <role>Resource_Manager</role>
    </sharedTo>
</ListView>