unpackaged/main/default/objects/On_Off_Boarding__c/listViews/X6_Complete.listView-meta.xml
<ListView>
    <fullName>X6_Complete</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Employee_ID__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Contract_ID__c</columns>
    <columns>JDE_Status__c</columns>
    <columns>JDE__c</columns>
    <columns>JDE_Completed_Date__c</columns>
    <columns>BillFlex_Action__c</columns>
    <columns>Payroll_Cycle__c</columns>
    <columns>BillFlex_Completed_Date__c</columns>
    <columns>Completed__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ball_in_Court__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Add,Update,Delete,Cancel</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>On_Off_Boarding__c.Technician</value>
    </filters>
    <label>6 Complete</label>
    <sharedTo>
        <role>Dispatch_Manager</role>
        <role>Resource_Manager</role>
    </sharedTo>
</ListView>